--- a/client/style.css
+++ b/client/style.css
@@ -27,16 +27,28 @@ body {
     background-color:#92a1d1;
   }
   #container {
-    width: 770px;
+    max-width: 770px;
+    width: 100%;
   }
   #weekdays {
     width: 100%;
     display: flex;
+    margin: auto;
+    
     color: #247BA0;
   }
-  #weekdays div {
-    width: 100px;
-    padding: 10px;
+  #weekdays>div {
+    width: 14.2857143%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    box-sizing: border-box;
+    border: black solid 0.01em;
+    word-break: break-all;
+    
+  }
+  #weekdays>div>div {
+      text-align: center;
+    font-size: 75%;
   }
   #calendar {
     width: 100%;
@@ -46,13 +58,13 @@ body {
   }
 
   .day {
-    width: 100px;
+    width: 14.2857143%;
     padding: 10px;
-    height: 100px;
+    height: 10vh;
     cursor: pointer;
     box-sizing: border-box;
     background-color: white;
-    margin: 5px;
+    
     box-shadow: 0px 0px 3px #CBD4C2;
     display: flex;
     flex-direction: column;
