--- a/client/style.css
+++ b/client/style.css
@@ -104,7 +104,7 @@ body {
     position: absolute;
     font-family: sans-serif;
   }
-  #eventTitleInput {
+  /* #newEventModal > input {
     padding: 10px;
     width: 100%;
     box-sizing: border-box;
@@ -113,15 +113,17 @@ body {
     outline: none;
     border: none;
     box-shadow: 0px 0px 3px gray;
-  }
+  } */
   #eventTitleInput.error {
     border: 2px solid red;
   }
   #cancelButton, #deleteButton {
     background-color: #d36c6c;
+    
   }
   #saveButton, #closeButton {
     background-color: #92a1d1;
+    
   }
   #eventText {
     font-size: 14px;
