--- a/client/style.css
+++ b/client/style.css
@@ -98,9 +98,10 @@ body {
     background-color: #e8f4fa;
     box-shadow: 0px 0px 3px black;
     border-radius: 5px;
-    width: 350px;
+    width: 70%;
     top: 100px;
-    left: calc(50% - 175px);
+    left: 9%;
+    align-content: center;
     position: absolute;
     font-family: sans-serif;
   }
@@ -117,16 +118,38 @@ body {
   #eventTitleInput.error {
     border: 2px solid red;
   }
-  #cancelButton, #deleteButton {
+  #cancelButton{
     background-color: #d36c6c;
     
   }
+  #editButton {
+    width: 25px;
+    height: 20px;
+    margin-left: auto;
+  }
+  #deleteButton {
+      background-color: red;
+      
+      width: 25px;
+      height: 20px;
+      text-align: center;
+      font-size: 10px;
+      margin-left: 5px;
+  }
+  
   #saveButton, #closeButton {
     background-color: #92a1d1;
     
   }
+  #addMoreButton {
+      background-color: rgba(0,0,0,0.8);
+  }
   #eventText {
     font-size: 14px;
+    border-bottom: lightslategray solid;
+    margin-bottom: 5px;
+    display: flex;
+    text-align: center;
   }
   #modalBackDrop {
     display: none;
