--- a/client/style.css
+++ b/client/style.css
@@ -139,6 +139,7 @@ body {
   
   #saveButton, #closeButton {
     background-color: #92a1d1;
+    margin-left: auto;
     
   }
   #addMoreButton, #updateButton {
